--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "morgan": "^1.10.0",
+    "nodemo": "^1.0.0",
     "nodemon": "^3.0.1"
   },
   "description": ""
