- Se agrego un NavBar en las vistas Partials que se renderiza en Inicio y en el Menú edición. - Se agregó un icono en Inicio que muestra información sobre el proyecto.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Rodriguez R.R. Dario",
   "license": "ISC",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
